fix: header z-index

--- a/online-zoo/pages/map/map.css
+++ b/online-zoo/pages/map/map.css
@@ -250,7 +250,7 @@ li {
   .header {
     position: fixed;
     top: 0px;
-    z-index: 10;
+    z-index: 100;
   }
 }
 
@@ -258,7 +258,7 @@ li {
   .header {
     position: fixed;
     top: 0px;
-    z-index: 10;
+    z-index: 100;
   }
 }
 
